--- a/list.html
+++ b/list.html
@@ -16,7 +16,7 @@
 <body background="bg1.jpg">
     <section>
     
-        <h1 class="listHeading">GROCERY LIST</h1>
+        <center><h1 class="listHeading">GROCERY LIST</h1></center>
   
         <!-- TABLE CONSTRUCTION-->
         <table id="myTable">
