--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body background="bg1.jpg">
-    <div class="div">
-        <center><h1 class="listHeading">THINGS TO BYE</h1></center>
-        
+    <div class="div1">
+        <center><h1>THINGS TO BYE</h1></center>
+
         <center><a class="lis" href="list.html" style="text-decoration: none;">Open List</a></center>
     </div>
     
