--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 <body background="bg1.jpg">
     <div class="div1">
-        <center><h1>THINGS TO BYE</h1></center>
-
-        <center><a class="lis" href="list.html" style="text-decoration: none;">Open List</a></center>
+        <center><h1>THINGS TO BYE</h1>
+        <a class="lis" href="list.html" style="text-decoration: none;">Open List</a></center>
     </div>
     
 </body>
