--- a/list.html
+++ b/list.html
@@ -16,7 +16,7 @@
 <body background="bg1.jpg">
     <section>
     <div class="div1">
-        <center><h1>GROCERY LIST</h1></center>
+        <center><h1>GROCERY LIST</h1>
   
         <!-- TABLE CONSTRUCTION-->
         <table id="myTable">
@@ -30,7 +30,7 @@
                 <th>&nbsp&nbsp&nbsp Category &nbsp&nbsp&nbsp</th>
                 <th>&nbsp&nbsp&nbsp Notes &nbsp&nbsp&nbsp</th>
             </tr>
-        </table>
+        </table></center>
     </div>
         
     </section>
