--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body background="bg1.jpg">
     <div class="div1">
-        <center><h1>THINGS TO BYE</h1>
+        <center><h1>THINGS_TO_BYE</h1>
         <a class="lis" href="list.html" style="text-decoration: none;">Open List</a></center>
     </div>
     
