--- a/list.html
+++ b/list.html
@@ -16,7 +16,7 @@
 <body background="bg1.jpg">
     <section>
     <div class="div1">
-        <center><h1>GROCERY LIST</h1>
+        <center><h1>GROCERY_LIST</h1>
   
         <!-- TABLE CONSTRUCTION-->
         <table id="myTable">
